# arepa-zephyr

./: .gitignore  README.md
blinky/: CMakeLists.txt  prj.conf
blinky/include/: trinket.h
blinky/src/: main.c  trinket.c
scripts/: build  flash  start_zephyr
